新規環境で動作するように調整

--- a/docker/scnactivemq/docker-compose.yml
+++ b/docker/scnactivemq/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   activemq:
-    image: webcenter/activemq:5.15.2
+    image: webcenter/activemq:latest
     ports:
       - 8161:8161
       - 61616:61616
