--- a/modules/frontweb/src/main/resources/application.properties
+++ b/modules/frontweb/src/main/resources/application.properties
@@ -8,10 +8,10 @@ spring.thymeleaf.mode=HTML
 
 ### registration
 spring.security.oauth2.client.registration.keycloak.provider=keycloak
-spring.security.oauth2.client.registration.keycloak.client-id=myapp1
-spring.security.oauth2.client.registration.keycloak.client-secret=f580682b-8ad7-4e13-b6cc-04f46af832c2
+spring.security.oauth2.client.registration.keycloak.client-id=demoapp
+spring.security.oauth2.client.registration.keycloak.client-secret=08c33835-c18c-4dd7-a7df-aee3479d17c4
 spring.security.oauth2.client.registration.keycloak.scope=openid
-spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:18080/auth/realms/myrealm
+spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:18080/auth/realms/demo
 
 ## Spring Session
 spring.session.store-type=redis
