--- a/modules/hello/src/main/resources/application.properties
+++ b/modules/hello/src/main/resources/application.properties
@@ -2,11 +2,4 @@ spring.main.banner-mode=off
 spring.application.name=hello
 server.port=8081
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:18080/auth/realms/myrealm
-
-### registration
-#spring.security.oauth2.client.registration.keycloak.provider=keycloak
-#spring.security.oauth2.client.registration.keycloak.client-id=myapp1
-#spring.security.oauth2.client.registration.keycloak.client-secret=f580682b-8ad7-4e13-b6cc-04f46af832c2
-#spring.security.oauth2.client.registration.keycloak.scope=openid
-#spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:18080/auth/realms/myrealm
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:18080/auth/realms/demo
