--- a/modules/todo/src/main/resources/application.properties
+++ b/modules/todo/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8082
 spring.main.banner-mode=off
 
 ## Security
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:18080/auth/realms/myrealm
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:18080/auth/realms/demo
 
 ## R2DBC
 spring.r2dbc.url=r2dbc:pool:postgresql://localhost:5432/postgres
