--- a/modules/frontweb/src/main/resources/application.properties
+++ b/modules/frontweb/src/main/resources/application.properties
@@ -20,3 +20,7 @@ spring.session.store-type=redis
 spring.redis.host=localhost
 spring.redis.port=6379
 
+## Spring Boot Actuator
+management.endpoints.web.base-path=/manage
+management.endpoints.enabled-by-default=false
+management.endpoint.health.enabled=true
