--- a/modules/hello/src/main/resources/application.properties
+++ b/modules/hello/src/main/resources/application.properties
@@ -8,3 +8,7 @@ logging.level.com.example=DEBUG
 ## Spring Security (リソースサーバー)
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:18080/auth/realms/demo
 
+## Spring Boot Actuator
+management.endpoints.web.base-path=/manage
+management.endpoints.enabled-by-default=false
+management.endpoint.health.enabled=true
