--- a/modules/notifier/build.gradle
+++ b/modules/notifier/build.gradle
@@ -24,16 +24,22 @@ ext {
 }
 
 dependencies {
+	// DevTool
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	
 	// Lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
-	// DevTool
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	
-	// Sleuth
+	// Spring Actuator
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+	// Spring Cloud Sleuth
 	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
-	
+
+	// Web
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
 	// Spring JMS (ActiveMQ)
 	implementation 'org.springframework:spring-jms'
 	implementation 'jakarta.jms:jakarta.jms-api'
