--- a/modules/notifier/src/main/resources/application.properties
+++ b/modules/notifier/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=notifier
+server.port=8083
 spring.main.banner-mode=off
 
 ## ログレベル
@@ -6,3 +7,8 @@ logging.level.com.example=DEBUG
 
 ## ActiveMQ
 spring.activemq.broker-url=tcp://localhost:61616
+
+## Spring Boot Actuator
+management.endpoints.web.base-path=/manage
+management.endpoints.enabled-by-default=false
+management.endpoint.health.enabled=true
