--- a/modules/todo/src/main/resources/application.properties
+++ b/modules/todo/src/main/resources/application.properties
@@ -16,3 +16,8 @@ spring.r2dbc.password=postgres
 
 ## ActiveMQ
 spring.activemq.broker-url=tcp://localhost:61616
+
+## Spring Boot Actuator
+management.endpoints.web.base-path=/manage
+management.endpoints.enabled-by-default=false
+management.endpoint.health.enabled=true
