--- a/modules/todo/src/main/resources/application.properties
+++ b/modules/todo/src/main/resources/application.properties
@@ -14,6 +14,15 @@ spring.r2dbc.url=r2dbc:pool:postgresql://localhost:5432/postgres
 spring.r2dbc.username=postgres
 spring.r2dbc.password=postgres
 
+## Flyway
+spring.flyway.enabled=true
+spring.flyway.url=jdbc:postgresql://localhost:5432/postgres
+spring.flyway.schemas=public
+spring.flyway.user=${spring.r2dbc.username}
+spring.flyway.password=${spring.r2dbc.password}
+spring.flyway.baseline-on-migrate=true
+spring.flyway.baseline-version=1.0.0
+
 ## ActiveMQ
 spring.activemq.broker-url=tcp://localhost:61616
 
