--- a/modules/frontweb/src/main/resources/application.properties
+++ b/modules/frontweb/src/main/resources/application.properties
@@ -24,3 +24,7 @@ spring.redis.port=6379
 management.endpoints.web.base-path=/manage
 management.endpoints.enabled-by-default=false
 management.endpoint.health.enabled=true
+
+##
+spring.messages.basename=i18n.messages
+#spring.messages.cache-duration=-1
